Added real redirection

--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<p>TEST</p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta http-equiv="refresh" content="0; url='https://heathlandscourt.sharepoint.com/sites/HeathlandsParkManagementCompanyMembers'" />
+  </head>
+  <body>
+    <p>If you are not automatically redirected, click <a href="https://heathlandscourt.sharepoint.com/sites/HeathlandsParkManagementCompanyMembers">here</a></p>
+  </body>
+</html>
